--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 </body>
 
 <script>
+    var sp = "/"
+    var today = new date();
+    var dd = today.getDate();
+    var mm = today.getMonth() + 1; //As Jan. is 0 !
+    var yyyy = today.getFullYear();
+
+    if(dd<10) dd='0' +dd;
+    if(mm<10) mm='0' +mm;
+
+    $("date").html(mm+sp+dd+yyyy);
 
 </script>
 </html>
